WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100837
Web Inspector: page crash when pausing in dedicated worker
https://bugs.webkit.org/show_bug.cgi?id=100837
Summary
Web Inspector: page crash when pausing in dedicated worker
Yury Semikhatsky
Reported
2012-10-31 03:00:47 PDT
Created
attachment 171607
[details]
Example page Steps: 1. Navigate to a page with dedicated worker and open inspector for the worker. 2. Click pause in the worker inspector. Result: Inspected page crash
Attachments
Example page
(1.01 KB, text/html)
2012-10-31 03:00 PDT
,
Yury Semikhatsky
no flags
Details
Example worker script
(413 bytes, application/javascript)
2012-10-31 03:01 PDT
,
Yury Semikhatsky
no flags
Details
Patch
(1.43 KB, patch)
2012-10-31 03:02 PDT
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
Patch
(11.02 KB, patch)
2012-10-31 06:21 PDT
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
Patch
(11.02 KB, patch)
2012-10-31 06:31 PDT
,
Yury Semikhatsky
pfeldman
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2012-10-31 03:01:13 PDT
Created
attachment 171608
[details]
Example worker script
Yury Semikhatsky
Comment 2
2012-10-31 03:02:31 PDT
Created
attachment 171609
[details]
Patch
Yury Semikhatsky
Comment 3
2012-10-31 03:02:59 PDT
Stack trace #0 base::debug::BreakDebugger () at ../../base/debug/debugger_posix.cc:243 #1 0x00007f95bc1d22ca in base::(anonymous namespace)::StackDumpSignalHandler (signal=11, info=0x7f95aa8924b0, context=0x7f95aa892380) at ../../base/process_util_posix.cc:142 #2 <signal handler called> #3 0x00007f95bb7dac04 in WebCore::InjectedScriptHost::scriptDebugServer (this=0x7f95ab3f5900) at ../../third_party/WebKit/Source/WebCore/inspector/InjectedScriptHost.cpp:169 #4 0x00007f95bbb3bb29 in WebCore::V8InjectedScriptHost::getInternalPropertiesCallback (args=...) at ../../third_party/WebKit/Source/WebCore/bindings/v8/custom/V8InjectedScriptHostCustom.cpp:206 #5 0x00007f95bd31b645 in v8::internal::HandleApiCallHelper<false> (args=..., isolate=0x7f95aaaf6000) at ../../v8/src/builtins.cc:1146 #6 0x00007f95bd31b223 in v8::internal::Builtin_Impl_HandleApiCall (args=..., isolate=0x7f95aaaf6000) at ../../v8/src/builtins.cc:1164 #7 0x00007f95bd314dec in v8::internal::Builtin_HandleApiCall (args=..., isolate=0x7f95aaaf6000) at ../../v8/src/builtins.cc:1163
Yury Semikhatsky
Comment 4
2012-10-31 06:21:31 PDT
Created
attachment 171632
[details]
Patch
Alexander Pavlov (apavlov)
Comment 5
2012-10-31 06:27:25 PDT
Comment on
attachment 171632
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=171632&action=review
> LayoutTests/ChangeLog:9 > + on all platforms that use JSC as workder debugging is not supported there
workder -> worker
Yury Semikhatsky
Comment 6
2012-10-31 06:30:43 PDT
(In reply to
comment #5
)
> (From update of
attachment 171632
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=171632&action=review
> > > LayoutTests/ChangeLog:9 > > + on all platforms that use JSC as workder debugging is not supported there > > workder -> worker
Done.
Yury Semikhatsky
Comment 7
2012-10-31 06:31:23 PDT
Created
attachment 171635
[details]
Patch
Yury Semikhatsky
Comment 8
2012-10-31 06:38:43 PDT
Chromium bugs:
http://code.google.com/p/chromium/issues/detail?id=153913
http://code.google.com/p/chromium/issues/detail?id=158191
WebKit Review Bot
Comment 9
2012-10-31 07:27:31 PDT
Comment on
attachment 171635
[details]
Patch Rejecting
attachment 171635
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: t/git/webkit-commit-queue/Source/WebKit/chromium/v8 --revision 12787 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' 50>At revision 12787. ________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output:
http://queues.webkit.org/results/14656167
Yury Semikhatsky
Comment 10
2012-10-31 08:12:51 PDT
Committed
r133030
: <
http://trac.webkit.org/changeset/133030
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug