Web Inspector: page crash when pausing in dedicated worker https://bugs.webkit.org/show_bug.cgi?id=100837

Reviewed by Pavel Feldman.

Source/WebCore:

Pass debugger agent to InjectedScriptHost::init in case of workers.

Test: inspector-protocol/debugger-pause-dedicated-worker.html

* inspector/WorkerInspectorController.cpp:
(WebCore::WorkerInspectorController::WorkerInspectorController):

LayoutTests:

Test that Debugger.pause works for dedicated workers. The test is skipped
on all platforms that use JSC as worker debugging is not supported there
yet.

* http/tests/inspector-protocol/resources/InspectorTest.js:
(WebInspector.dispatchMessageFromBackend):
* inspector-protocol/debugger-pause-dedicated-worker-expected.txt: Added.
* inspector-protocol/debugger-pause-dedicated-worker.html: Added.
* inspector-protocol/resources/dedicated-worker.js: Added.
(onmessage):
(doWork):
* platform/efl/TestExpectations:
* platform/gtk/TestExpectations:
* platform/mac/TestExpectations:
* platform/qt/TestExpectations:
* platform/win/TestExpectations:
* platform/wincairo/TestExpectations:

Canonical link: https://commits.webkit.org/118908@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133030 268f45cc-cd09-0410-ab3c-d52691b4dbfc